Sat May  1 21:29:29 CEST 2004 (tk)
----------------------------------
  * clamd: stream scanner:
	+ scan exactly up to StreamMaxLength (patch by Joe Maimon
	  <jmaimon*ttec.com>)
	+ fix description leak on ReadTimeout (patch by Maxim Dounin
	  <mdounin@rambler-co.ru>)
  * contrib/trashscan: v. 0.12 (Trashware <trashware*gmx.de>)
  * libclamav: in block-encrypted mode scan a raw encrypted archive before
	       marking it as encrypted (requested by Andy Fiddaman
	       <clam*fiddaman.net>)

Thu Apr 29 21:59:36 CEST 2004 (tk)
----------------------------------
  * libclamav: detect more mail file types

Thu Apr 29 09:59:41 BST 2004 (njh)
----------------------------------
  * libclamav:		Tidied the handling of content disposition type:
  				better handling of out of memory
				right chop white space

Thu Apr 29 08:36:49 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fixed typo, remove but introduced yesterday where the
  				result of cli_realloc was not used

Wed Apr 28 15:29:29 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Better quarantine message error report when failing
				to create the temporary file
			Send 554 after DATA received, not 550
			Don't send rejection notices to rejection notices, we
				just end up playing ping-pong (patch by "Andrey
				J.Melnikoff (TEMHOTA)" <temnota@kmv.ru>
			If CL_DEBUG is defined, don't redirect stdout/stderr
			Don't attempt to return an old signature if no
				filename has been given. There has never been
				one to return

Wed Apr 28 01:33:10 CEST 2004 (tk)
----------------------------------
  * libclamav: detect more mail file types

Tue Apr 27 14:53:39 CEST 2004 (tk)
----------------------------------
  * clamscan: fix file access problem when using clamscan with external
	      unpackers in a superuser mode (reported by Robert Allerstorfer
	      <roal*anet.at> and ZMan Z. <x86zman*go-a-way.dyndns.org>).
	      Access verification mechanism is POSIX compliant now.