@@ -1,6 +1,5 @@
 /*
- *  Copyright (C) 2002 - 2004 Tomasz Kojm <tkojm@clamav.net>
- *  With enhancements from Thomas Lamy <Thomas.Lamy@in-online.net>
+ *  Copyright (C) 2004 Tomasz Kojm <tkojm@clamav.net>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -17,21 +16,11 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-#ifndef __SCANNERS_H
-#define __SCANNERS_H
+#ifndef __MSEXPAND_H
+#define __MSEXPAND_H
 
-typedef enum {
-    CL_UNKNOWN_TYPE = 0,
-    CL_DATAFILE,
-    CL_MAILFILE,
-    CL_GZFILE,
-    CL_ZIPFILE,
-    CL_BZFILE,
-    CL_RARFILE,
-    CL_MSCFILE,
-    CL_OLE2FILE
-} cli_file_t;
+#include <stdio.h>
 
-cli_file_t cli_filetype(const char *buf, size_t buflen);
+int cli_msexpand(FILE *in, FILE *out);
 
 #endif
